feat: add css file

--- a/indexCV.html
+++ b/indexCV.html
@@ -2,20 +2,20 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV_Matskevich</title>
+    <link rel="stylesheet" href="./stylesCV.css"/>
 </head>
     <body>
-
-   ![avatar](./anime_avatar.png)
+        <header>
+        <img id="avatar" src="./avatar.png" alt="avatar"/>
         <h1>Anastasiya Matskevich</h1>
         <h2>Front-end developer</h2>
-*asya.frontend@gmail.com* 
+<h4>asya.frontend@gmail.com</h4> 
+<h4>+375333333333</h4></header>
 
-*+375333996044*
-***
-
-
-<ul>Soft skills:
+<main>
+<ul><b>Soft skills:</b>
 <li>a responsible employee</li> 
 <li>learn new things easily </li> 
 <li>attentive to details </li> 
@@ -24,24 +24,29 @@
 <li>work well both in a team and on my own</li>  
 <li>constantly improve my skills</li> </ul>
 
-<ul>Hard skills: 
+<ul><b>Hard skills:</b> 
 <li> understanding the structure of web applications (HTML, CSS)</li> 
 <li> knowledge of testing theory and practice</li> </ul>
 
 
-<ul>Job experience
+<ul><b>Job experience</b>
 <li> 2024 - data processing specialist in an IT organization</li> 
-<li> 2023 - tester internship on a real commercial project</li> </ul>
+<li> 2023 - tester internship on a commercial project</li> </ul>
 
-<ul>Education
+<ul><b>Education</b>
 <li> 2025 - JS/Frontend, pre-course, RSSchool (in progress)</li> 
 <li> 2023 - Software Testing, QALearning Testing School (Certificate).</li> </ul>
 
-<ul>Languages:</ul>
+<ul><b>Languages:</b>
 
 <li>English - intermediate</li>
 <li>Belarusian - native</li>
-<li>Russian - native</li>
-
+<li>Russian - native</li></ul>
+        </main>
+        <footer>
+            <a href="https://github.com/AsyaMatskevich">My github</a>
+            <p><b>2025</b></p>
+           <a href="https://rs.school/courses/javascript-ru"><img id="logo" src="./rs-school-logo.svg"</a>
+        </footer>
     </body>
 </html>
