--- a/indexCV.html
+++ b/indexCV.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV_Matskevich</title>
-    <link rel="stylesheet" href="./stylesCV.css"/>
+    <link rel="stylesheet" href="./stylesCV.css">
 </head>
     <body>
         <header>
-        <img id="avatar" src="./avatar.png" alt="avatar"/>
+        <img id="avatar" src="./avatar.png" alt="avatar">
         <h1>Anastasiya Matskevich</h1>
         <h2>Front-end developer</h2>
 <h4>asya.frontend@gmail.com</h4> 
 <h4>+375333333333</h4></header>
 
 <main>
-<ul><b>Soft skills:</b>
+<b>Soft skills:</b>
+<ul>
 <li>a responsible employee</li> 
 <li>learn new things easily </li> 
 <li>attentive to details </li> 
@@ -24,21 +25,24 @@
 <li>work well both in a team and on my own</li>  
 <li>constantly improve my skills</li> </ul>
 
-<ul><b>Hard skills:</b> 
+<b>Hard skills:</b>
+<ul> 
 <li> understanding the structure of web applications (HTML, CSS)</li> 
 <li> knowledge of testing theory and practice</li> </ul>
 
 
-<ul><b>Job experience</b>
+<b>Job experience</b>
+<ul>
 <li> 2024 - data processing specialist in an IT organization</li> 
 <li> 2023 - tester internship on a commercial project</li> </ul>
 
-<ul><b>Education</b>
+<b>Education</b>
+<ul>
 <li> 2025 - JS/Frontend, pre-course, RSSchool (in progress)</li> 
 <li> 2023 - Software Testing, QALearning Testing School (Certificate).</li> </ul>
 
-<ul><b>Languages:</b>
-
+<b>Languages:</b>
+<ul>
 <li>English - intermediate</li>
 <li>Belarusian - native</li>
 <li>Russian - native</li></ul>
@@ -46,7 +50,7 @@
         <footer>
             <a href="https://github.com/AsyaMatskevich">My github</a>
             <p><b>2025</b></p>
-           <a href="https://rs.school/courses/javascript-ru"><img id="logo" src="./rs-school-logo.svg"</a>
+           <a href="https://rs.school/courses/javascript-ru"><img id="logo" src="./rs-school-logo.svg" alt="rss-logo"></a>
         </footer>
     </body>
 </html>
